--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-python-dotenv~=0.19.0
-xrpl-py~=1.1.1
-fastapi~=0.68.1
-uvicorn~=0.15.0
+Flask==2.0.1
+flask_login==0.5.0
+flask_sqlalchemy==2.5.1
+python-decouple==3.4
+SQLAlchemy==1.4.23
