--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.0.1
-flask_login==0.5.0
-flask_sqlalchemy==2.5.1
-python-decouple==3.4
+Flask~=2.0.1
+flask_login~=0.5.0
+flask_sqlalchemy~=2.5.1
+python-decouple~=3.4
 SQLAlchemy==1.4.23
 eth-brownie~=1.16.2
