--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ flask_sqlalchemy~=2.5.1
 python-decouple~=3.4
 SQLAlchemy==1.4.23
 eth-brownie~=1.16.2
+Werkzeug~=2.0.1
+flask-wtf~=0.15.1
+WTForms~=2.3.3
